@@ -4,6 +4,7 @@
 
 *** Added
 + *tetragono*: Add =__contains__= and =__len__= for hamiltonians handle of abstract state.
++ *bridge*: Add support for bridging from TNSP new format.
 *** Changed
 + *TAT.py*: Use =scikit-build-core= as build backend. =MAKEFLAGS= and =CMAKEFLAGS= are droped. Use =scikit-build-core=
   environment variable =SKBUILD_CMAKE_ARGS= to pass arguments to cmake command line when building =PyTAT= wheel.
@@ -16,6 +17,8 @@
 *** Removed
 *** Fixed
 + *TAT.py*: Fix a bug in loading Symmetry or Edge.
++ *bridge*: Fix several bugs in tnsp bridge, because of the TAT interface changes a lot since the first release of tnsp
+  bridge.
 
 ** [[https://github.com/USTC-TNS/TAT/compare/v0.3.11...v0.3.12][v0.3.12]] - 2023-11-29
 
